# CPP_SocketMessenger

./: .clang-format  .gitignore  CMakeLists.txt  vcpkg.json
Client/: CMakeLists.txt  main.cpp
Client/include/Services/: ClientService.h  PacketsDispatchService.h
Client/include/Services/PacketsDispatchService_/: ClientPacketContext.h
Client/src/Services/: ClientService.cpp
Common/: CMakeLists.txt  main.h
Common/fbs/: Base.fbs  ClientHello.fbs  ServerHello.fbs
Common/include/: Epoll.h
Common/include/Network/: Packet.h  PacketHeader.h  PacketView.h  Peer.h  SecurePeer.h  Socket.h
Common/include/Network/Transport/: BasicTransport.h  ITransport.h
Common/include/Services/: ServiceBase.h  ServiceProvider.h
Common/include/Services/PacketsDispatchService/: PacketsDispatchService.h
Common/src/: Epoll.cpp
Common/src/Network/: Packet.cpp  PacketHeader.cpp  PacketView.cpp  Peer.cpp  SecurePeer.cpp  Socket.cpp
Common/src/Network/Transport/: BasicTransport.cpp
Server/: CMakeLists.txt  main.cpp
Server/include/Network/Server/: ClientConnection.h  Server.h
Server/include/Services/: PacketsDispatchService.h  ServerService.h  ServiceBase.h  Services.h
Server/include/Services/PacketsDispatchService_/: ServerPacketContext.h
Server/src/Network/Server/: ClientConnection.cpp  Server.cpp
Server/src/Services/: ServerService.cpp  Services.cpp
